<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".sample.MainActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="8dp">


                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchDarkLightMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="20dp"
                    android:text="@string/switchDarkLightMode" />

                <com.kazemieh.designsystem.libdesign.Button
                    android:id="@+id/smallButtonXml_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    app:configurationButton="primary"
                    app:leadingIcon="@drawable/icon"
                    app:myCornerRadius="eight"
                    app:stateButton="enable"
                    app:styleButton="elevated"
                    app:buttonType="normal"
                    app:text="small button xml"
                    app:trailingIcon="@drawable/icon" />

                <com.kazemieh.designsystem.libdesign.Button
                    android:id="@+id/smallButtonXml_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    app:configurationButton="primary"
                    app:leadingIcon="@drawable/icon"
                    app:myCornerRadius="hundred"
                    app:buttonType="Icon"
                    app:stateButton="enable"
                    app:styleButton="field"
                    app:text="small button xml"
                    app:trailingIcon="@drawable/icon" />

                <com.kazemieh.designsystem.libdesign.Button
                    android:id="@+id/smallButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginHorizontal="16dp" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchRoundnessSmallButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="20dp"
                    android:text="@string/roundness" />

                <Spinner
                    android:id="@+id/spinnerConfigurationSmallButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="20dp" />

                <Spinner
                    android:id="@+id/spinnerStyleSmallButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="20dp" />

                <Spinner
                    android:id="@+id/spinnerStateSmallButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="20dp" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchShowLeadingIconSmallButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="20dp"
                    android:text="@string/show_leading_icon" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchShowTrailingIconSmallButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="20dp"
                    android:text="@string/show_trailing_icon" />


                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchTypeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="20dp"
                    android:text="@string/type_button" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>